fix css for classification-tree-filter with overflow

--- a/app/assets/stylesheets/modules/components/_filters.scss
+++ b/app/assets/stylesheets/modules/components/_filters.scss
@@ -1874,9 +1874,11 @@ $filter-border: #aaa;
     align-items: center;
     margin: 0;
     gap: 0.5rem;
+    overflow: hidden;
 
     li {
       margin: 0;
+      min-width: 1px;
 
       &:last-child {
         margin-right: 0;
